# email-reader

./: .env.example  .gitignore  Cargo.toml  README.md  main.py
src/: main.rs
