[package]
name = "imap-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
command = "0.0.0"
dotenv = "0.15.0"
imap = "2.4.1"
native-tls = "0.2.14"
regex = "1.11.2"
runtime-tokio = "0.0.0"
sqlx = { version = "0.8.6", features = ["macros", "mysql", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["macros", "rt"] }
